# frameworks/go/huma/Client/openapi.yaml
@@ -110,6 +110,27 @@ components:
         - count
         - items
       type: object
+    EchoedParametersThree:
+      additionalProperties: false
+      properties:
+        count:
+          format: int64
+          type: integer
+        echo:
+          $ref: "#/components/schemas/ParametersThree"
+        items:
+          items:
+            $ref: "#/components/schemas/Item"
+          nullable: true
+          type: array
+        size:
+          type: string
+      required:
+        - echo
+        - size
+        - count
+        - items
+      type: object
     EchoedParametersTwo:
       additionalProperties: false
       properties:
@@ -323,6 +344,23 @@ components:
       required:
         - one
       type: object
+    ParametersThree:
+      additionalProperties: false
+      properties:
+        one:
+          format: int64
+          type: integer
+        three:
+          format: int64
+          type: integer
+        two:
+          format: int64
+          type: integer
+      required:
+        - one
+        - two
+        - three
+      type: object
     ParametersTwo:
       additionalProperties: false
       properties:
@@ -458,6 +496,34 @@ paths:
       security:
         - bearer: []
       summary: Get authorized small
+  /body/bind/large:
+    post:
+      operationId: post-body-bind-large
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Order"
+          application/octet-stream:
+            schema:
+              format: binary
+              type: string
+              x-contentMediaType: application/octet-stream
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BoundOrder"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Post body bind large
   /body/bind/medium:
     post:
       operationId: post-body-bind-medium
@@ -542,6 +608,34 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Post body validate first error
+  /body/validate/large:
+    post:
+      operationId: post-body-validate-large
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CheckedOrder"
+          application/octet-stream:
+            schema:
+              format: binary
+              type: string
+              x-contentMediaType: application/octet-stream
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BoundCheckedOrder"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Post body validate large
   /body/validate/medium:
     post:
       operationId: post-body-validate-medium
@@ -1311,6 +1405,42 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Get parameters by one with second by two
+  /parameters/{one}/{two}/{three}:
+    get:
+      operationId: get-parameters-by-one-by-two-by-three
+      parameters:
+        - in: path
+          name: one
+          required: true
+          schema:
+            format: int64
+            type: integer
+        - in: path
+          name: two
+          required: true
+          schema:
+            format: int64
+            type: integer
+        - in: path
+          name: three
+          required: true
+          schema:
+            format: int64
+            type: integer
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EchoedParametersThree"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Get parameters by one by two by three
   /plaintext:
     get:
       operationId: list-plaintext
@@ -1469,6 +1599,28 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Get stream items
+  /template/large:
+    get:
+      operationId: list-template-large
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                format: base64
+                type: string
+          description: OK
+          headers:
+            Content-Type:
+              schema:
+                type: string
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: List template large
   /template/medium:
     get:
       operationId: list-template-medium
